Fix Vercel API Routes configuration - enable backend deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,22 @@
 {
   "version": 2,
+  "env": {
+    "DATABASE_URL": "@database_url"
+  },
   "builds": [
     {
-      "src": "server.js",
+      "src": "package.json",
       "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server.js"
+      "dest": "api/index.js"
     },
     {
       "src": "/(.*)",
       "dest": "public/$1"
     }
-  ],
-  "env": {
-    "DATABASE_URL": "@database_url"
-  }
+  ]
 }
