Fix Vercel routing configuration for API routes

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "setup": "npm install",
+    "build": "npx prisma generate",
     "start": "node --watch --env-file=.env server.js",
     "postinstall": "prisma generate"
   },
