--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,8 @@
 {
   "version": 2,
   "buildCommand": "npm install && npx prisma generate",
+  "installCommand": "npm install",
   "env": {
     "DATABASE_URL": "@database_url"
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
-  ]
+  }
 }
