--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,23 @@
     "DATABASE_URL": "@database_url"
   },
   "functions": {
-    "api/**/*.js": {
-      "maxDuration": 30
+    "api/index.js": {
+      "maxDuration": 30,
+      "memory": 1024
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/(.+)",
+      "dest": "/public/$1"
+    },
+    {
+      "src": "/",
+      "dest": "/public/index2.html"
+    }
+  ]
 }
