Add Vercel rewrites for API endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
   "installCommand": "npm install",
   "env": {
     "DATABASE_URL": "@database_url"
-  }
+  },
+  "rewrites": [
+    { "source": "/api/test", "destination": "/api/test.js" },
+    { "source": "/api/trips", "destination": "/api/trips.js" },
+    { "source": "/api/cities", "destination": "/api/cities.js" },
+    { "source": "/api/activities", "destination": "/api/activities.js" }
+  ]
 }
