--- a/vercel.json
+++ b/vercel.json
@@ -6,18 +6,14 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    },
-    {
-      "src": "/",
-      "dest": "/public/index2.html"
+      "source": "/(.*)",
+      "destination": "/public/$1"
     }
   ],
   "env": {
