Fix Vercel deployment - use auto-detection and check VERCEL env

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["public/**", "routes/**", "prisma/**"]
-      }
-    }
-  ],
+  "public": "public",
   "env": {
     "DATABASE_URL": "@database_url"
   }
